Native Messaging part 1

--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -3,11 +3,16 @@
     bottom: 0;
     right: 0;
     margin: 5px;
+    z-index: 1000;
 }
 
 #docker-bar > div {
     display: inline-block;
     margin: 5px;
+}
+
+#docker-bar > div:not(:last-child) {
+    margin-right: 10px;
 }
 
 #battery-color.low-battery{
