--- a/extension/css/font-awesome.css
+++ b/extension/css/font-awesome.css
@@ -6,12 +6,7 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.eot');
-  src: url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.eot') format('embedded-opentype'), 
-  url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.woff2') format('woff2'), 
-  url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.woff') format('woff'), 
-  url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.ttf') format('truetype'), 
-  url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.svg') format('svg');
+  src: url('chrome-extension://__MSG_@@extension_id__/fonts/fontawesome-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
